tdf#103001 DOCX export: fix RelId cache when switching streams

RelIds are used to refer to external streams, e.g. images. A RelId cache
tries to avoid storing the same image more than once in the export
result. RelIds are relative to an XML stream, so caching them across
stream switches is problematic. There was code already to notify the
cache after a header or footer was written, but:

1) It was only done after a switch, not before and

2) It cleared the whole cache, instead of stashing it away, and
restoring it when the write of the special stream is done.

Regression from commit b484e9814c66d8d51cea974390963a6944bc9d73
(tdf#83227 oox: reuse RelId in DML/VML export for the same graphic,
2015-09-07), this existing problem became more visible when caching
started to include draw images, not just writer ones.

Fix both problems by turning the cache into a stack that is
pushed/popped around stream changes.

(cherry picked from commit 3906d25a2e12123aee54654ad26699a2832389d4)

Change-Id: If9ec168823eea5e272197e28f6125ba626605550
Reviewed-on: https://gerrit.libreoffice.org/29832
Reviewed-by: Tamás Zolnai <zolnaitamas2000@gmail.com>
Tested-by: Tamás Zolnai <zolnaitamas2000@gmail.com>
(cherry picked from commit 3f373500282c926031eed4f995ca8d51402ed187)